--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1623,107 +1623,107 @@ stories:
   domain: http://www.capecodonline.com/
   link: http://capecodonline.com/2019/10/16/three-great-fall-walks-on-cape-cod/
 images:
-- name: abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
-- name: crow-crow-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-spagetti-accident.jpg
-- name: death-valley-death-valley-national-park-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-really-hot.jpg
-- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-- name: oldtrain-oldtrain-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purple-storm.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-- name: subway-subway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
-- name: statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-- name: bf-skinner-volkswagon-microbus-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-volkswagon-microbus-windows.jpg
-- name: old-church-oldchurch-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-yellow-paper.jpg
-- name: locked-up-steam-lock-up-steam-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-collage.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+- name: rain-princess-border-down-the-fence-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-down-the-fence-line.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
+- name: old-door-lock-old-door-lock-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purp-paper.jpg
+- name: oldcabin-store-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-circuit.jpg
+- name: stalin-time-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-firetruck-bright-sun.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
+- name: hollywood-building-hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-marcel-duchamp.jpg
+- name: mosaic-face-mosaic-face-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-alien-goggles.jpg
+- name: machine-road-machine-road-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purp-paper.jpg
+- name: sand-hand-sand-hand-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-color.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
+- name: bf-skinner-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-public-market_36725946605_o.jpg
+- name: old-granary-field-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
+- name: oldhouse-oldhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purp-paper.jpg
+- name: stalin-time-border-down-the-fence-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-down-the-fence-line.jpg
+- name: trucksilo-trucksilo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
+- name: school-clouds-church-clouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-storm.jpg
+- name: curtain-curtain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-satan-red.jpg
+- name: ellis-island-ellis-island-room-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-dali.jpg
 - name: wind-mills-windmills-gan-vogh.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-gan-vogh.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-- name: carry-load-carryload-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-marcel-duchamp.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-- name: stalin-time-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-building-phoenix.jpg
-- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
-- name: beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-- name: supreme-court-supremecourt-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-graham-sutherland.jpg
-- name: window-window-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
-- name: lincoln-memorial-lincolnmemorial-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-color.jpg
-- name: wind-mills-windmills-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-- name: stalin-time-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-crypto-wheels-old-compute-bletchley.jpg
-- name: eduardo-eduardo-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
-- name: ellis-island-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-circuit.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: old-house-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
-- name: dragon-desert-desert-dragon-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
-- name: bf-skinner-white-house-press-room-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-press-room-flag.jpg
-- name: oldhousecars-house-old-cars-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-free-woman.jpg
-- name: store-on-corner-oldcabin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
-- name: old-granary-field-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-circuit.jpg
-- name: server-cloud-server-racks-door-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-missle.jpg
-- name: machine-road-machine-road-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-clean-view.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-- name: docks-docks-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-dali.jpg
-- name: wind-mills-windmills-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-gred-mash.jpg
-- name: powerlines-power-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colored-circuits.jpg
-- name: oldroad-old-road-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-brush.jpg
-- name: aws-s3-dunes-dunes-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still.jpg
-- name: server-cloud-server-racks-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: two-sattelite-dishes-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
-- name: nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-- name: old-house-oldhouse-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-internet-numbers.jpg
-- name: mediterranean-mediterranean-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
-- name: docks-docks-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
-- name: statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-nazi-poster.jpg
+- name: yosemite-yosemite-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
+- name: windowmountain-window-mountain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-post-modern.jpg
+- name: lincoln-memorial-lincolnmemorial-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-matrix.jpg
+- name: la-muse-down-side-street-shop-sign.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-down-side-street-shop-sign.jpg
+- name: liberty-back-statue-liberty-back-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-asteroids.jpg
+- name: amusement-park-amusement-park-2-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-internet-numbers.jpg
+- name: downtown-trucksilo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-storm.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+- name: old-gas-pumps-oldgaspumps-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-rain.jpg
+- name: beach-rocks-beach-rocks-currents-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-monet-one.jpg
+- name: stalin-time-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-press-room-flag.jpg
+- name: stories-white-house-window-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-house-window-atari-missle.jpg
+- name: la-muse-cemetery_36690406946_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cemetery_36690406946_o.jpg
+- name: copper-circuit-blechlety-old-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-blechlety-old-racks.jpg
+- name: white-house-lawn-white-house-lawn-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-three.jpg
+- name: wind-mills-windmills-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-marcel-duchamp.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+- name: copper-circuit-dinosaur-stepping-on-lego.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dinosaur-stepping-on-lego.jpg
+- name: berlinwall2-berlinwall-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crunch-paper.jpg
+- name: rain-princess-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-close-to-all-remote-aircraft.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+- name: power-lines-power-lines-empty-space-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-post-modern.jpg
+- name: status-berlin-status-berlin-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-neo-instinct.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+- name: stalin-time-stainless-tree-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stainless-tree-clouds.jpg
+- name: aws-s3-stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-35910978054-906047b6cb-z.jpg
+- name: old-granary-field-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-hot-spicy.jpg
+- name: bf-skinner-san-pedro-light-cities.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-pedro-light-cities.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
+- name: death-valley-death-valley-national-park-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-soul.jpg
 ---
 Shawnee Employees, Partners Win Regional Awards.&nbsp;Wyoming, Georgia State Bring Similar Approaches Into Arizona Bowl.&nbsp;Hawesville Man Featured On Sportsman Channel This Week.&nbsp;Second Man Charged In Connection With Creston Bank Robbery.&nbsp;We Love The Daily Grind.&nbsp;Portraits Of Frida To Go On Display At Hilltop Gallery.&nbsp;Colombia Proposes To Resume Aerial Spraying Of Coca Fields.&nbsp;Peach Bowl Tennessee Indiana.&nbsp;
